Fixes broken menu on mobile

--- a/app/assets/stylesheets/external/landing/_header.css.scss
+++ b/app/assets/stylesheets/external/landing/_header.css.scss
@@ -88,7 +88,11 @@ header#pageHeader{
               font-weight: 400;
             }
 
-                     }
+            &.show-on-home{
+              display: block;
+            }
+
+          }
         }
       }
     }
